--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
         <title>Lee Mulvey // web developer, filmmaker, musician, designer, creator.</title>
         
         <!-- Fancy fonts. -->
-        <link href='https://fonts.googleapis.com/css?family=Josefin+Slab:400,700' rel='stylesheet' type='text/css'>
-        <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+        <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:400,700" rel="stylesheet"  type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel='stylesheet' type="text/css" />
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
         
         <!-- Normalize all the things! -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" rel="stylesheet" type="text/css" />
@@ -28,9 +29,17 @@
         <div class="container">
             <header>
                 <div class="row">
-                    <div class="col-md-4 col-md-offset-3 lee-header">
+                    <div class="col-md-3 col-md-offset-2 lee-header">
                         <h1>Lee<br />Mulvey</h1>
                         <img src="http://www.gravatar.com/avatar/a7ded1395c3373006d4c404d47f12847?s=180" class="img-responsive img-circle lee-thumb" alt="Lee Mulvey" />
+                    </div>
+                    <div class="col-xs-1">
+                        <ul class="sidebar-icons">
+                            <li><a href="#"><i class="fa fa-github"></i></a></li>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                        </ul>
                     </div>
                 </div>
             </header>
