--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="row">
                     <div class="col-xs-8 col-xs-offset-1 col-md-8 col-md-offset-2 lee-header-coming-soon">
                         <div class="text-center" id="cta-links">
-                            <p class="text-shadow"><i class="fa fa-bolt"></i> <strong>Don't turn back yet!</strong></p>
+                            <p class=""><i class="fa fa-bolt"></i> <strong>Don't turn back yet!</strong></p>
                             <p>Links above will show you who I am and what I've been working on.</p>
                         </div>
                         
