Made links link somewhere.

--- a/index.html
+++ b/index.html
@@ -35,18 +35,18 @@
                         <img src="img/lee-thumb.jpg" class="img-circle lee-thumb" alt="Lee Mulvey" />
                         <div class="clearfix visible-xs-block"></div>
                         <div class="col-xs-12 lee-header-icon-alt">
-                            <a href="#"><i class="fa fa-github lee-header-icon-ea"></i></a> 
-                            <a href="#"><i class="fa fa-facebook lee-header-icon-ea"></i></a> 
-                            <a href="#"><i class="fa fa-twitter lee-header-icon-ea"></i></a> 
-                            <a href="#"><i class="fa fa-linkedin lee-header-icon-ea"></i></a> 
+                            <a href="https://github.com/LMulvey/"><i class="fa fa-github lee-header-icon-ea"></i></a> 
+                            <a href="http://facebook.com/leemulvey"><i class="fa fa-facebook lee-header-icon-ea"></i></a> 
+                            <a href="http://twitter.com/leemulvey"><i class="fa fa-twitter lee-header-icon-ea"></i></a> 
+                            <a href="https://www.linkedin.com/in/lee-mulvey-4074406a"><i class="fa fa-linkedin lee-header-icon-ea"></i></a> 
                         </div>
                     </div>
                     <div class="col-md-1">
                         <ul class="sidebar-icons">
-                            <li><a href="#"><i class="fa fa-github"></i></a></li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="https://github.com/LMulvey/"><i class="fa fa-github"></i></a></li>
+                            <li><a href="http://facebook.com/leemulvey"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="http://twitter.com/leemulvey"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/lee-mulvey-4074406a"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
                     </div>
                 </div>
